Makefile.feedtrng: remove debug options

--- a/Makefile.feedtrng
+++ b/Makefile.feedtrng
@@ -2,6 +2,6 @@ PROG=	feedtrng
 SRCS=	feedtrng.c
 MAN=
 
-CFLAGS=	-g -O2 -pipe -std=c99 -pedantic -Wall
+CFLAGS=	-O2 -pipe -std=c99 -pedantic -Wall
 
 .include <bsd.prog.mk>
