Makefile.trngdev: add *_if.h to SRCS

--- a/Makefile.trngdev
+++ b/Makefile.trngdev
@@ -2,7 +2,9 @@
 
 KMOD    =  trng
 SRCS    =  trng.c
+SRCS    += device_if.h bus_if.h
 
 #CFLAGS  += -DDEBUG -g
+#CFLAGS	+= -DRNDTEST
 
 .include <bsd.kmod.mk>
