trng/Makefile: Disable RNDTEST

--- a/trng/Makefile
+++ b/trng/Makefile
@@ -6,6 +6,6 @@ SRCS    += device_if.h bus_if.h
 KMODDIR	=	/boot/modules
 
 #CFLAGS  += -DDEBUG -g
-CFLAGS	+= -DRNDTEST
+#CFLAGS	+= -DRNDTEST
 
 .include <bsd.kmod.mk>
